[project]
name = "autoencoder-for-image-compression"
version = "0.1.0"
description = ""
authors = [
    {name = "saranjthilak",email = "saranjthilak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14.1"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
